# Assignment2_rt

./: .gitignore  README.md
src/assignment2_rt/: CMakeLists.txt  package.xml
src/assignment2_rt/msg/: ObstacleInfo.msg
src/assignment2_rt/srv/: GetAvgVel.srv  SetThreshold.srv
src/bme_gazebo_sensors/: CMakeLists.txt  package.xml
src/bme_gazebo_sensors/launch/: spawn_robot.launch.py  world.launch.py
src/bme_gazebo_sensors/rviz/: gps.rviz  rviz.rviz
src/bme_gazebo_sensors/urdf/: mogi_bot.gazebo  mogi_bot.urdf
src/bme_gazebo_sensors/worlds/: home.sdf  my.sdf  my_world.sdf
src/safe_teleop/: package.xml  setup.cfg  setup.py
src/safe_teleop/safe_teleop/: safety_node.py  teleop_node.py
